syntax = "proto3";

package proto;

option go_package = "api/proton";

// gRPC-сервис для управления авторизации и регистрации
service AuthService {
  // Login функция обработчик авторизации
  rpc Login(LoginRequest) returns (LoginResponse);
  // Registration функция обработчик регистрации
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);
}

// Запрос на авторизацию
message LoginRequest {
  string login = 1;
  string password = 2;
}

// Ответ на авторизацию
message LoginResponse {
  string token = 1;
  string user_uid = 2;
}

// Запрос на регистрацию
message RegistrationRequest {
  string login = 1;
  string password = 2;
}

// Ответ на регистрацию
message RegistrationResponse {
  string token = 1;
  string user_uid = 2;
}